--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>About This Item</title>
   </head>
   <body>
-    <div id="app">App Goes Here</div>
+    <div id="app">Rest Your Butt Here</div>
     <script src="./bundle.js"></script>
   </body>
 </html>
