Implemented additional features to make proxy easier.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>About This Item</title>
   </head>
   <body>
-    <div id="service2"></div>
+    <div id="about-this-item"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
