render br bundle on html

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="about-this-item"></div>
-    <script src="./bundle.js"></script>
+    <script src="./bundle.js.br"></script>
   </body>
 </html>
